# cmps12

./: CMakeLists.txt  package.xml
include/cmps12/: cmps12_i2c.hpp
src/: cmps12_i2c.cpp  orientation_publisher.cpp  orientation_subscriber.cpp
